# toolkit-legacy

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  empirical.yml  index.md  toolkit_path.m  toolkit_version.m  vot_browse.m  vot_environment.m  vot_experiments.m  vot_information.m  vot_initialize.m  vot_pack.m  vot_test.m
analysis/: adapted_ranks.m  analyze_accuracy_robustness.m  analyze_average_expected_overlap.m  analyze_expected_overlap.m  analyze_failures.m  analyze_overlap.m  analyze_precision_recall.m  analyze_ranks.m  analyze_redetection.m  analyze_speed.m  analyze_trajectories.m  ar_analysis.m  compare_pairs.m  compare_trackers.m  create_label_aspects.m  create_label_selectors.m  create_sequence_aspects.m  create_sequence_selectors.m  create_tag_selectors.m  estimate_accuracy.m  estimate_expected_overlap.m  estimate_failures.m  failure_analysis.m  generate_permutation_plot.m  generate_ranking_plot.m  generate_ranking_report.m  index.md  label_analysis.m  normalize_speed.m  process_results_labels.m  process_results_sequences.m  ranking.m  ranking_analysis.m  report.html  sequences_preview.m  trackers_ranking.m
clustering/: compute_clusters.m  compute_featurevect.m  validate_clusters.m  visualize_clusters.m
documentation/: README.md  cover.tex  generate_pdf.sh  header.tex  integration.md  internals.md  overview.md
evaluation/: LICENSE.txt  configuration_template.m  do_browse.m  do_experiments.m  do_test.m  track_repeat.m  track_run.m  track_test.m  track_trial.m  vot_environment.m  vot_experiments.m  vot_information.m  vot_initialize.m  vot_test.m
experiment/: execution_default.m  experiment_chunked.m  experiment_realtime.m  experiment_supervised.m  experiment_unsupervised.m  prepare_trial_data.m  repeat_trial.m  run_tracker.m  run_trax.m  run_trial.m  stack_vot2013.m  stack_vot2013_extra.m  stack_vot2014.m
measures/: benchmark_hardware.m  benchmark_native.cpp  calculate_overlap.m  (+10 more)
tracker/examples/native/: CMakeLists.txt  build.sh  ncc.cpp  static.c  static.cpp  static_rgbd.cpp  vot.h
(+494 files in other folders)
